--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 ALL_WEEKS_V5 - Admin.ipynb
 other
-Nao Github
+Nao Github/NaoRL
+Nao Github/pynaoqi-python2.7-2.5.5.5-win32-vs2013
 Quizes
 test.ipynb
 /LeetCode Playground
+**/CreateStructure.ps1
+**/pynaoqi-python2.7-2.5.5.5-win32-vs2013.zip
+**/python-2.7.18.msi
